@@ -8,6 +8,8 @@
 	* Preventing player from moving avatar during the execution of scripts; this
 	  is verified in BG and SI (for example, loom or bellows); delayed scripts do
 	  not seem to hinder movement until they are activated.
+	* Prevent ES from displaying the 'font0000.vga' file in SI's static dir as it
+	  is apparently from an old origin screensaver and is not a true vga file.
 
 2006-09-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Decoupled usecode functions for shapes > 1023 from the shape #. Removed
